eks-manifests/aws-load-balancer-controller-nlb-ingress.yml
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: aws-load-balancer-controller
#   namespace: kube-system
#   labels:
#     app.kubernetes.io/component: controller
#     app.kubernetes.io/name: aws-load-balancer-controller
#   annotations:
#     eks.amazonaws.com/role-arn: arn:aws:iam::975050243996:role/sure-k8s-cluster-aws-lbc-role
# ---
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: ingres-class
#   annotations:
#     ingressclass.kubernetes.io/is-default-class: "true"
# spec:
#   controller: ingress.k8s.aws/alb
---
apiVersion: v1
kind: Namespace
metadata:
  name: stock-api-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api-d
  namespace: stock-api-ns
  labels:
    app: stock-api-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-api-d-l # match template `labels`
  template:
    metadata:
      labels:
        app: stock-api-d-l
    spec:
      containers:
      - name: stock-api-c
        image: ysurendrak/sure-py-stock-services:latest
        ports:
        - name: api
          containerPort: 5000 # Should match with docker expose port
        resources:
          requests:
            memory: 56Mi
            cpu: 50m
          limits:
            memory: 56Mi
            cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: stock-api-s
  namespace: stock-api-ns
spec:
  type: ClusterIP # Kubernetes Ingress Controller points to this service using culster ip
  ports:
    - name: api
      port: 5100
      targetPort: api
  selector:
    app: stock-api-d-l
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-api-ingress
  namespace: stock-api-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: api.surein.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-api-s
                port:
                  number: 5100
